fix #1308 add system monitoring logs